# yhack26

./: .env.example  .gitignore  CLAUDE.md  Polymarket Design Challenge - NexHacks.txt  README.md  app.py  dashboard.py  deribit.py  greeks.py  polymarket.py  pyproject.toml  railway.toml  render.yaml  server.py  start-dev.ps1
.claude/: settings.local.json
frontend/: package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  placeholders.js
frontend/src/components/: About.jsx  ContractDetail.jsx  ContractTable.jsx  GreeksDashboard.jsx  HedgeCalculator.jsx  PayoffSurface.jsx  ProbDensity.jsx  SpreadChart.jsx  ThetaHarvest.jsx  VolSmile.jsx  WhatIf.jsx
