[project]
name = "polygreeks"
version = "0.1.0"
description = "Binary cash-or-nothing options Greeks for Polymarket crypto contracts"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "plotly>=6.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.33.0",
    "scipy>=1.17.1",
    "streamlit>=1.55.0",
    "uvicorn>=0.34.0",
]
